source/metacall/include/metacall/metacall.h

/**
*  @brief
*    Create an empty handler into a loader with name @name
*
*  @param[in] loader
*    Pointer to the loader which the handle belongs to
*
*  @param[in] name
*    Name of the handle
*
*  @param[out] handle_ptr
*    On success, returns the pointer to the handle created, otherwise NULL
*
*  @return
*    Return zero on success, different from zero on error
*/
METACALL_API int metacall_handle_initialize(void *loader, const char *name, void **handle_ptr);
/**
*  @brief
*    Populate the objects of @handle_src into @handle_dest
*
*  @param[inout] handle_dest
*    Handle where the objects from @handle_src will be stored
*
*  @param[in] handle_src
*    Handle from where the objects will be copied
*
*  @return
*    Return zero on success, different from zero on error
*/
METACALL_API int metacall_handle_populate(void *handle_dest, void *handle_src);
/**
*  @brief
*    Get the function by @name from @handle
*
*  @param[in] handle
*    Pointer to the handle returned by metacall_load_from_{file, memory, package}
*
*  @param[in] name
*    Name of the function
*
*  @return
*    Function reference, null if the function does not exist
*/
METACALL_API void *metacall_handle_function(void *handle, const char *name);
/**
*  @brief
*    Get the handle by @name
*
*  @param[in] tag
*    Extension of the script
*
*  @param[in] name
*    Name of the handle
*
*  @return
*    Handle reference, null if the function does not exist
*/
METACALL_API void *metacall_handle(const char *tag, const char *name);
/**
*  @brief
*    Get name of a @handle
*
*  @param[in] handle
*    Pointer to the handle to be retrieved
*
*  @return
*    String that references the handle
*/
METACALL_API const char *metacall_handle_id(void *handle);
/**
*  @brief
*    Return a value representing the handle as a map of functions (or values)
*
*  @param[in] handle
*    Reference to the handle to be described
*
*  @return
*    A value of type map on success, null otherwise
*/
METACALL_API void *metacall_handle_export(void *handle);